vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr

    tags = {
        Name = "vpc-${var.environment}"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    map_public_ip_on_launch = true

    tags = {
        Name = "public-${var.environment}"
    }
}

resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnet_cidr

  tags = {
    Name = "private-${var.environment}"
  }
}
